--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -18,11 +18,12 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/adminImage_id"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profileImage"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:src="@drawable/bg_circle" />
+                android:layout_margin="4dp"
+                android:background="@drawable/bg_circle" />
 
             <LinearLayout
                 android:layout_width="match_parent"
