--- a/app/src/main/res/layout/activity_customer_dashboard.xml
+++ b/app/src/main/res/layout/activity_customer_dashboard.xml
@@ -18,18 +18,18 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/userImage_id"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:src="@drawable/bg_circle" />
+                android:layout_margin="4dp"
+                android:background="@drawable/bg_circle"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingStart="8dp">
-
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
