--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -128,10 +128,11 @@
                     android:drawableStart="@drawable/ic_lock"
                     android:drawablePadding="6dp"
                     android:hint="Password"
+                    android:layout_marginBottom="24dp"
                     android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <RadioGroup
+           <!-- <RadioGroup
                 android:paddingStart="6dp"
                 android:paddingEnd="6dp"
                 android:layout_marginBottom="24dp"
@@ -155,7 +156,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Register as Admin" />
-            </RadioGroup>
+            </RadioGroup>-->
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
