--- a/app/src/main/res/layout/activity_update_service_status.xml
+++ b/app/src/main/res/layout/activity_update_service_status.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".AdminUpdateServiceStatus">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/adminUpdateServiceStatus_rv_id"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#F7F7F7"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
