--- a/app/src/main/res/layout/activity_customer_dashboard.xml
+++ b/app/src/main/res/layout/activity_customer_dashboard.xml
@@ -83,7 +83,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/red_round_border"
-            android:text="Need up of our Pick-up and Delivery Services?" />
+            android:text="Shoe Cleaning Service" />
 
         <Button
             android:textAllCaps="false"
