--- a/app/src/main/res/layout/activity_customer_dashboard.xml
+++ b/app/src/main/res/layout/activity_customer_dashboard.xml
@@ -87,6 +87,15 @@
 
         <Button
             android:textAllCaps="false"
+            android:id="@+id/btnAboutAs"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/red_round_border"
+            android:text="About As" />
+
+        <Button
+            android:textAllCaps="false"
             android:id="@+id/btnLogout_id"
             android:layout_width="match_parent"
             android:background="@drawable/red_round_border"
