--- a/app/src/main/res/layout/activity_add_admin.xml
+++ b/app/src/main/res/layout/activity_add_admin.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="96dp"
-        android:text="Add Admin"
+        android:text="Add Staff"
         android:textColor="@color/colorPrimary"
         android:textSize="42sp"
         android:textStyle="bold"
