--- a/app/src/main/res/layout/list_item_order_view_row.xml
+++ b/app/src/main/res/layout/list_item_order_view_row.xml
@@ -40,6 +40,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="7"
+            android:text="Email" />
+
+        <TextView
+            android:id="@+id/tv_userEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:text="Email" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="10">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="7"
             android:text="Status" />
 
         <TextView
